[metadata]
name = konbinine
version = attr: konbinine.__version__
author = Huey Yeng
author_email = huey.yeng.mmu@gmail.com
maintainer = Huey Yeng
maintainer_email = huey.yeng.mmu@gmail.com
description = Opinionated Autodesk Shotgun/ShotGrid API Wrapper.
keywords =
    python
    library
    shotgrid
    shotgun
    api
    autodesk
url = https://github.com/hueyyeng/konbini
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    shotgun-api3>=3.2.6
    requests>=2.28.0
python_requires = >=3.7

[options.packages.find]
exclude =
    docs
    examples
    tests
